# flyer_attribute

./: .gitignore  db.py  flyer_kf_modules.py  process_attributes.py  pyproject.toml
fusion_pkgs/: fusion_db-0.0.1-py3-none-any.whl  fusion_kf-0.1.0-py3-none-any.whl
